Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <h2>
-<a id="neutrinote-user-guide" class="anchor" href="#neutrinote-user-guide" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>neutriNote User Guide</h2>
+<a id="user-guide" class="anchor" href="#user-guide" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>User Guide</h2>
 
 <ol>
 <li><a href="#started">Getting Started</a></li>
