Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ font-family: 'Goudy Bookletter 1911', serif;
 <li>Tap <strong>editor status</strong> (to the right of the note title) to view note statistics and clipboard content, long tap to view recent updates in other notes without leaving the current note.</li>
 <li>Tap the <strong>Shortcut</strong> icon to view user defined shortcuts.</li>
 <li>Immediately after conducting a search, tap the <strong>Search</strong> icon to advance to the next match.</li>
-<li>To edit a drawing, select it and tap the <strong>Draw</strong> icon.</li>
+<li>To edit a drawing, select it and tap the <strong>Sketch</strong> icon.</li>
 <li>Double tap <strong>editor status</strong> to temporarily save the current cursor position.<br>
 </li>
 <li>Swipe left on <strong>editor status</strong> to return to saved cursor position.</li>
