Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -511,6 +511,10 @@ font-family: 'Goudy Bookletter 1911', serif;
 <td align="center">Specify a metadata substring pattern to disable internal Markdown parser</td>
 </tr>
 <tr>
+<td>com.appmindlab.nano.pref_local_priority_tag</td>
+<td align="center">Specify a metadata substring pattern to prevent local copy from being overwritten by remote changes.  Note that conflicts may occur if a note is being edited on multiple devices</td>
+</tr>
+<tr>
 <td>com.appmindlab.nano.pref_indent_char</td>
 <td align="center">Specify the character(s) to use for indentation.  Default: 4 spaces</td>
 </tr>
