Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ font-family: 'Goudy Bookletter 1911', serif;
 </tr>
 <tr>
 <td>com.appmindlab.nano.pref_excluded_buttons</td>
-<td align="center">Selectively hide toolbar buttons via a semicolon delimited string, e.g., <code>location;draw;replace</code> will hide the location, draw, and replace buttons on the toolbar.  The following buttons can be hidden: <code>markdown</code>, <code>time</code>, <code>date</code>, <code>location</code>, <code>expand</code>, <code>draw</code>, <code>top</code>, <code>bottom</code>, <code>find</code>, <code>replace</code>, <code>barcode</code>, <code>image</code>, <code>define</code>, <code>calculate</code>, <code>search</code>
+<td align="center">Selectively hide toolbar buttons via a semicolon delimited string, e.g., <code>location;draw;replace</code> will hide the location, draw, and replace buttons on the toolbar.  The following buttons can be hidden: <code>markdown</code>, <code>time</code>, <code>date</code>, <code>location</code>, <code>expand</code>, <code>draw</code>, <code>top</code>, <code>bottom</code>, <code>find</code>, <code>replace</code>, <code>barcode</code>, <code>image</code>, <code>ocr</code>, <code>define</code>, <code>calculate</code>, <code>search</code>
 </td>
 </tr>
 <tr>
