Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <li><a href="#md">Markdown</a></li>
 <li><a href="#automation">Automation</a></li>
 <li><a href="#textexpansion">Text Expansion</a></li>
+<li><a href="#batchselect">Batch Select</a></li>
 <li><a href="#voicememo">Voice Memo</a></li>
 <li><a href="#externalfonts">External Fonts</a></li>
 <li><a href="#ambientglow">Ambient Glow</a></li>
@@ -334,6 +335,20 @@ ps|neutriNote$ ps
 <p>You can include basic parameters with the commands, just write them after the command shortcut and separate each parameter with space+commas like this: <code>shortcut_label param1 , param2 , param3</code>.  Select the whole string and tap the expand icon to paste the output.  Users of cURL can also simplify the definitons of their expansions with <code>neutriNote?</code> instead of <code>neutriNote$</code> and trail that directly by a URL.</p>
 
 <h3>
+<a id="batch-select" class="anchor" href="#batch-select" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a name="batchselect">Batch Select</a>
+</h3>
+
+<p>Special selection commands are available for better productivity.</p>
+
+<ul>
+<li>Tap <code>Top</code> icon in <em>Toolbox</em> when a section of text has been selected to extend selection all the way to the top.</li>
+<li>Tap <code>Bottom</code> icon in <em>Toolbox</em> when a section of text has been selected to extend selection all the way to the bottom.</li>
+<li>Tap <strong>editor status</strong> next to note title to gather statistics for current note when nothing is selected, or just the selected text when a section of text has been selected (experimental).</li>
+<li>To edit an ASCII drawing, select it and tap the <strong>Sketch</strong> icon.</li>
+<li>Tap <code>(</code> or <code>)</code> from <em>Symbol Bar</em> when text selection is active to enclose the selected text in brackets.  Hint: also try out other symbol pairs.</li>
+</ul>
+
+<h3>
 <a id="voice-memo" class="anchor" href="#voice-memo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a name="voicememo">Voice Memo</a>
 </h3>
 
@@ -449,7 +464,6 @@ font-family: 'Goudy Bookletter 1911', serif;
 <li>Tap <strong>editor status</strong> (to the right of the note title) to view note statistics and clipboard content, long tap to view recent updates in other notes without leaving the current note.</li>
 <li>Tap the <strong>Shortcut</strong> icon to view user defined shortcuts.</li>
 <li>Immediately after conducting a search, tap the <strong>Search</strong> icon to advance to the next match.</li>
-<li>To edit a drawing, select it and tap the <strong>Sketch</strong> icon.</li>
 <li>Double tap <strong>editor status</strong> to temporarily save the current cursor position.<br>
 </li>
 <li>Swipe left on <strong>editor status</strong> to return to saved cursor position.</li>
